[emacs] Fetch packages over SSH

--- a/emacs.org
+++ b/emacs.org
@@ -67,6 +67,7 @@ limited to what's available in a package archive. Configure straight.
 #+BEGIN_SRC emacs-lisp
   (defvar bootstrap-version)              ; Must be a dynamic variable
 
+  (setq straight-vc-git-default-protocol 'ssh)
   (setq straight-check-for-modifications '(check-on-save find-when-checking))
 
   (let ((bootstrap-file
