[emacs] Move koek-org/get-code-block-var-value to correct location

--- a/emacs.org
+++ b/emacs.org
@@ -5628,7 +5628,7 @@ templates]].
 
   (use-package ob-core
     :defer t
-    :config
+    :preface
     (defun koek-org/get-code-block-var-value (name)
       "Return value of variable NAME for current code block.
   NAME is a string, the variable's name."
@@ -5647,7 +5647,7 @@ templates]].
         (seq-find (pcase-lambda (`(,nm))
                     (string= nm name)))
         cdr))
-
+    :config
     ;; Evaluate code blocks in buffer after confirmation
     (let ((whitelist nil))
       (setq org-confirm-babel-evaluate
