[emacs] Fix performance frame title and mode line

--- a/emacs.org
+++ b/emacs.org
@@ -190,6 +190,7 @@ Move deleted files to trash.
 
     (setq projectile-ignored-project-function #'koek-proj/forgetp)
     (setq projectile-completion-system 'ivy)
+    (setq projectile-dynamic-mode-line nil)
     (projectile-mode)
     :delight)
 #+END_SRC
@@ -5826,21 +5827,16 @@ Show file name in title bar.
 #+BEGIN_SRC emacs-lisp
   (setq frame-title-format
         '((:eval
-           ;; Resolve conflict between `file-truename' and
-           ;; `query-replace', see
-           ;; https://debbugs.gnu.org/cgi/bugreport.cgi?bug=33697
-           (save-match-data
-             (let ((file-name (buffer-file-name)))
-               (cond
-                ((and (projectile-project-p) file-name)
-                 (format "~%s/%s"
-                         (projectile-project-name)
-                         (file-relative-name (file-truename file-name)
-                                             (projectile-project-root))))
-                (file-name
-                 (abbreviate-file-name file-name))
-                (t
-                 "%b")))))
+           (let ((file-name (buffer-file-name)))
+             (cond
+              (koek-ml/project-spec
+               (format "~%s/%s"
+                       (plist-get koek-ml/project-spec :name)
+                       (plist-get koek-ml/project-spec :relative)))
+              (file-name
+               (abbreviate-file-name file-name))
+              (t
+               "%b"))))
           " - Emacs"))
 #+END_SRC
 
@@ -6135,6 +6131,9 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                 koek-ml/separator)))))
       "Eyebrowse mode line construct.")
 
+    (defvar-local koek-ml/project-spec nil
+      "Projectile project specification.")
+
     (defun koek-ml/truncate (s length)
       "Truncate string S to LENGTH.
   S is a string, the string to truncate.  LENGTH is an integer, the
@@ -6144,10 +6143,11 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
     (defconst koek-ml/id
       '(:eval
         (moody-tab
-         (concat (when (and (projectile-project-p) (derived-mode-p 'prog-mode))
-                   (concat (koek-ml/truncate (projectile-project-name) 16) "/"))
-                 (propertize (koek-ml/truncate (buffer-name) 32)
-                             'face 'mode-line-buffer-id))))
+         (concat
+          (when (and koek-ml/project-spec (derived-mode-p 'prog-mode))
+            (concat (koek-ml/truncate (plist-get koek-ml/project-spec :name) 16) "/"))
+          (propertize (koek-ml/truncate (buffer-name) 32)
+                      'face 'mode-line-buffer-id))))
       "Id mode line construct.")
 
     (defconst koek-ml/state '(" " "%*%+")
@@ -6283,6 +6283,23 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
     (defconst koek-ml/modes
       '("" koek-ml/separator "(" mode-name mode-line-process minor-mode-alist ")")
       "Modes mode line construct.")
+
+    ;; projectile
+
+    ;; `projectile-project-root' is expensive, i.e., calling it during
+    ;; mode line update makes Emacs lag
+    (defun koek-ml/setup-project-spec ()
+      "Setup projectile project specification for current."
+      (when-let ((file-name (projectile-project-root)))
+        (setq koek-ml/project-spec
+              (list :dir file-name
+                    :name (projectile-project-name file-name)
+                    :relative
+                    (file-relative-name (file-truename (buffer-file-name))
+                                        file-name)))
+        (force-mode-line-update)))
+
+    (add-hook 'find-file-hook #'koek-ml/setup-project-spec)
 
     ;; ediff
     (defconst koek-ml/diff
