[emacs] Rephrase docstrings

--- a/emacs.org
+++ b/emacs.org
@@ -554,8 +554,8 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
 
     (defun koek-sp/setup-separate-sexp-handler (mode &rest open-delimiters)
       "Setup separate-sexp handler in MODE for OPEN-DELIMITERS.
-  MODE is a major mode symbol.  OPEN-DELIMITERS are one or more
-  strings."
+  MODE is a symbol, the mode to setup.  OPEN-DELIMITERS are one or
+  more strings, the delimiters that call the handler."
       (dolist (delimiter open-delimiters)
         (sp-local-pair mode delimiter nil
                        :post-handlers '(:add koek-sp/separate-sexp))))
@@ -577,8 +577,8 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
     (defun koek-sp/setup-format-c-block-on-return-handler
         (mode &rest open-delimiters)
       "Setup format-c-block handler in MODE for OPEN-DELIMITERS.
-  MODE is a major mode symbol.  OPEN-DELIMITERS are one or more
-  strings."
+  MODE is a symbol, the mode to setup.  OPEN-DELIMITERS are one or
+  more strings, the delimiters that call the handler."
       (dolist (delimiter open-delimiters)
         (sp-local-pair mode delimiter nil
                        ;; For event names, see `single-key-description'
@@ -688,8 +688,8 @@ When line is indented, press =TAB= to complete text before point.
     :preface
     (defmacro koek-cpny/setup-backends (&rest args)
       "Setup backends in modes.
-  ARGS are one or more mode name symbols followed by a list of
-  backends, see `company-backends'."
+  ARGS are one or more symbols, the modes to setup, followed by a
+  list of backends, see `company-backends'."
       (let ((setup-backends-sym (gensym))
             (modes (butlast args))
             (backends (car (last args))))
