[emacs] Rephrase docstring and comment

--- a/emacs.org
+++ b/emacs.org
@@ -259,7 +259,7 @@ VC is a placeholder.
     :preface
     (defun koek-diff/unfold-outline ()
       "Unfold outline in outline and derived modes."
-      (when (derived-mode-p 'outline-mode) ; org is derived from outline
+      (when (derived-mode-p 'outline-mode) ; org-mode derives from outline-mode
         (outline-show-all)))
     :config
     ;; Restore window layout on quit
@@ -5866,7 +5866,8 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
     (run-hooks 'koek-thm/load-hook))
 
   (defvar koek-thm/dark-themes nil
-    "List of theme symbols, see `koek-thm/set-frame-theme-variant'.")
+    "List of theme symbols.
+  Themes are dark themes.")
 
   (defun koek-thm/set-frame-theme-variant (frame)
     "Set theme variant of FRAME.
