[emacs] Rework enabling paren-face

--- a/emacs.org
+++ b/emacs.org
@@ -2856,9 +2856,12 @@ For more information, see ~man 5 hunspell~.
 #+BEGIN_SRC emacs-lisp
   (use-package paren-face
     :straight t
+    :hook
+    ((clojure-mode cider-repl-mode lisp-mode sly-mrepl-mode
+      emacs-lisp-mode lisp-interaction-mode scheme-mode geiser-repl-mode) .
+     paren-face-mode)
     :config
-    (setq paren-face-regexp (rx (any "()[]{}")))
-    (global-paren-face-mode))
+    (setq paren-face-regexp (rx (any "()[]{}"))))
 #+END_SRC
 
 ** hl-line - Highlight current line
