[emacs] Rebind koek-wm/launch-firefox

--- a/emacs.org
+++ b/emacs.org
@@ -3133,7 +3133,7 @@ Bury unneeded buffers, computers have more than enough memory.
     (bind-keys
      ("C-c z p" . koek-wm/kill-power-off)
      ("C-c z z" . koek-wm/suspend)
-     ("C-c x f" . koek-wm/launch-firefox)))
+     ("C-c x C-f" . koek-wm/launch-firefox)))
 
   (use-package exwm-input
     :defer t
@@ -3197,7 +3197,8 @@ Bury unneeded buffers, computers have more than enough memory.
                     ("s-x" . counsel-linux-app)
                     ("s-q" . bury-buffer)
                     ("s-d" . kill-current-buffer)
-                    ("<f11>" . exwm-layout-toggle-fullscreen))))
+                    ("<f11>" . exwm-layout-toggle-fullscreen)
+                    ("s-C-f" . koek-wm/launch-firefox))))
 
     ;; Translate Emacs to non Emacs keybindings in line mode
     (setq exwm-input-simulation-keys
