--- a/emacs.org
+++ b/emacs.org
@@ -3251,8 +3251,9 @@ Bury unneeded buffers, computers have more than enough memory.
       :group 'exwm-workspace)
 
     (define-advice exwm-workspace-switch
-        (:before (&rest _args) koek-wm/update-previous-workspace-n)
-      (setq koek-wm/previous-workspace-n exwm-workspace-current-index))
+        (:before (index &optional _force) koek-wm/update-previous-workspace-n)
+      (unless (eq index exwm-workspace-current-index)
+        (setq koek-wm/previous-workspace-n exwm-workspace-current-index)))
 
     (dolist (n (number-sequence 0 9))
       (defalias (intern (format "koek-wm/switch-workspace-%d" n))
