[emacs] Prefer nil to ()

--- a/emacs.org
+++ b/emacs.org
@@ -3415,7 +3415,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
   (defun exar--decode-manufacturer (bytes)
     (let ((base (expt 2 5))
           (n (exar--decode-int bytes))
-          (chars ()))
+          (chars nil))
       (while (> n 0)
         (push (+ (1- ?A) (% n base)) chars)
         (setq n (/ n base)))
@@ -3535,7 +3535,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
                          (when-let ((edid (exar--get-in props :edid :id)))
                            (push (cons edid id) ids))
                          ids)
-                       outputs ())))
+                       outputs nil)))
       (mapcar (pcase-lambda (`(,id . ,props))
                 (cons id
                       (append (list :id id) props
@@ -5489,7 +5489,7 @@ templates]].
         cdr))
 
     ;; Evaluate code blocks in buffer after confirmation
-    (let ((whitelist ()))
+    (let ((whitelist nil))
       (setq org-confirm-babel-evaluate
             (lambda (_language _body)
               ;; A reference to a buffer is a good id but would storing
